--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -6,6 +6,7 @@
     border: none;
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
 }
 
 .cabecalho {
@@ -91,7 +92,6 @@
     color: white;
     gap: 35px;
     line-height: 27px;
-    font-weight: lighter;
 }
 
 .principal-conteudo-1-titulo {
@@ -145,3 +145,45 @@
     line-height: 15px;
 }
 
+.principal-conteudo-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 530px;
+    width: 100%;
+    padding: 40px 5%;
+}
+
+.principal-conteudo-2-esquerda {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    color: #000000;
+    width: 50%;
+    font-size: 25px;
+}
+
+.principal-conteudo-2-esquerda-titulo {
+    font-size: 40px;
+    font-weight: 500;
+}
+
+.principal-conteudo-2-blocos {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-items: center;
+    width: 50%;
+    gap: 6px;
+}
+
+.principal-conteudo-2-bloco {
+    background-image: linear-gradient(90deg, #73d8ec, #123a6d);
+    height: 140px;
+    width: 200px;
+}
+
+.principal-conteudo-2-bloco:hover {
+    box-shadow: 1px 5px 10px black;
+}
