--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -179,17 +179,19 @@
 
 .principal-conteudo-2-blocos {
     display: flex;
+    flex-direction: row;
     flex-flow: row wrap;
     align-items: center;
     justify-items: end;
     width: 50%;
+    height: 100%;
     gap: 6px;
 }
 
 .principal-conteudo-2-bloco {
     background-image: linear-gradient(90deg, #73d8ec, #123a6d);
-    height: 144px;
-    width: 207px;
+    max-height: 144px;
+    max-width: 207px;
 }
 
 .principal-conteudo-2-bloco:hover {
@@ -261,6 +263,6 @@
     color: #186a8a;
 }
 
-button:hover, span:hover{
+button:hover, span:hover, .principal-conteudo-2-blocos:hover{
     cursor: pointer;
 }
